Closed Bug 957921 Opened 10 years ago Closed 10 years ago

MOZ_Assert: Assertion failure: mOpened, at AsmJSCache.cpp:1032

Categories

(Core :: DOM: Core & HTML, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla29

People

(Reporter: gwagner, Assigned: luke)

References

Details

Attachments

(1 file)

Seen during mochitests on b2g debug emulator builds:

https://tbpl.mozilla.org/php/getParsedLog.php?id=32730519&tree=Pine&full=1
Blocks: 933355
Lemme think about this in the morning; this might just be an overzealous assert.
Ah hah, I see it: bug 944821 added a new child/parent roundtrip between the parent and child:
  parent -OnOpenMetadataForRead-> child -SelectCacheFileToRead-> parent
if the child fails to FindHashMatch in RecvOnOpenMetadataForRead, then it will Send__delete__ which causes the parent to Recv__delete__ when the cache file has not yet been opened, hence the assert.
Attached patch fix-open-bugSplinter Review
Given the new interleaving described above, the fix is just to generalize Recv__delete__ to be more like ActorDestroy which can happen at any time.

I was able to repro the assert on desktop FF with browser.tabs.remote = true on http://people.mozilla.org/~lwagner/test-caching.html and verify that this patch fixes the assert.
Assignee: nobody → luke
Status: NEW → ASSIGNED
Attachment #8357603 - Flags: review?(Jan.Varga)
Comment on attachment 8357603 [details] [diff] [review]
fix-open-bug

Review of attachment 8357603 [details] [diff] [review]:
-----------------------------------------------------------------

looks good
Attachment #8357603 - Flags: review?(Jan.Varga) → review+
https://hg.mozilla.org/mozilla-central/rev/4fcc5b6e4f23
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla29
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: