Bug 957921 - Fix Recv__delete__ when asm.js cache file not yet opened in parent process runnable (r=janv)

--HG--
extra : rebase_source : f69a7f31d366c5c16b0f2a6c6dfc6c5467317107